--- a/Homepage.html
+++ b/Homepage.html
@@ -15,11 +15,28 @@
 
             </div>
     <div id="innerContainer">
-       <div id="smallNav">
+        <div id="smallNav"> <!--search option ,dicover, cart  Wishlist-->
         
        </div>
 
-       
+       <!-- Body work start from here -->
+
+       <div id="Trending">  <!-- Trending gamers and big discount games -->
+      <div id="Trend_sliding"></div>
+      <div id="Trend_list"></div>
+
+       </div> <!--Games on sale section  -->      <!--  -->
+
+       <div id="sales_buttons">
+        <h2 style="color: white;">Game On Sale ></h2>
+       </div>
+        <div id="sale_list">
+
+        </div>
+
+       <div> 
+
+       </div>
 
     </div>
 
