working on sliding picture

--- a/Homepage.html
+++ b/Homepage.html
@@ -22,13 +22,15 @@
        <!-- Body work start from here -->
 
        <div id="Trending">  <!-- Trending gamers and big discount games -->
-      <div id="Trend_sliding"></div>
+      <div id="Trend_sliding">
+        
+      </div>
       <div id="Trend_list"></div>
 
        </div> <!--Games on sale section  -->      <!--  -->
 
        <div id="sales_buttons">
-        <h2 style="color: white;">Game On Sale ></h2>
+        <h2 style="color: white;"></h2>
        </div>
         <div id="sale_list">
 
