slide_right_List

--- a/Homepage.html
+++ b/Homepage.html
@@ -25,7 +25,23 @@
       <div id="Trend_sliding">
         
       </div>
-      <div id="Trend_list"></div>
+      <div id="Trend_list">
+        <div class="slideOneByOne" id="post1">
+            <img src="" alt="">
+            <h4></h4></div>
+        <div class="slideOneByOne" id="post2">
+            <img src="" alt="">
+            <h4></h4>
+        </div>
+        <div class="slideOneByOne" id="post3">
+            <img src="" alt="">
+            <h4></h4>
+        </div>
+        <div class="slideOneByOne" id="post4">
+            <img src="" alt="">
+            <h4></h4>
+        </div>
+      </div>
 
        </div> <!--Games on sale section  -->      <!--  -->
 
